// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI/UX engineer handoff template snapshots > UI/UX engineer to planner renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`planner\` agent **only** receives the text inside your \`handoff --next-role="planner"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. Own the UI design and test contract, but do not implement production code or edit tracked source. Temporary design preview artifacts outside the tracked repository and browser rendering are permitted. Do not spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for existing source and rendered DOM evidence, browser-rendered target markup/styles, complete user flows with loading/empty/error/success states, responsive details, and exact UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration test plan.
- Study the existing source markup and browser-rendered DOM/styles, including relevant states and viewports, before proposing a target.
- Supply complete target HTML/DOM with exact class attributes and required CSS/theme dependencies, then render it in a browser using project styling and theme. Include the preview location, viewport/state, and actual screenshot or DOM/computed-style evidence.
- Define exact production UI tests, entry points, selectors/assertions, and the expected meaningful initial failure; the implementer runs them before production edits, then reruns them and compares the result with the rendered target. Never test only a mock of proposed HTML.
- The UI/UX engineer owns interface structure, classes/styles, states, interactions, and this UI test contract. Missing render evidence or unresolved choices are blockers for the configured entry point; implementation or test-contract deviations need an engineer revision through that entry point.
- Do not propose or require web accessibility implementation work unless the user explicitly requests it.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and rendered target HTML/classes/styles detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// rendered HTML, class attributes, CSS/theme dependencies, and state/viewport variations.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Existing UI evidence
<source paths, current rendered DOM/style evidence, observed problem, and inspected states/viewports>

## Rendered target markup
<complete target HTML with class attributes and required CSS/style dependencies for each affected state/viewport; concrete mapping to production components; preview artifact location plus actual browser screenshot or DOM/computed-style evidence; unresolved rendering prerequisites are blockers>

## UI tests first
<exact production UI test files, fixtures, entry points, selectors/assertions, and expected initial failure for the engineer-owned markup/styles/states/interactions; run before production edits, confirm design-relevant failure, implement, then rerun to pass; never test only a mock of the proposal>

## Design authority and implementation sequence
1. The entry point states the UI problem and coordinates the handoff.
2. The UI/UX engineer studies existing markup and renders the target DOM, classes, and styles.
3. The implementer writes and runs the specified UI tests before changing production UI.
4. The implementer implements the remaining code, reruns the tests, and compares the production UI with the rendered design.
<The UI/UX engineer owns UI design and its test contract. The entry point forwards it unchanged; implementation or test-contract deviations require an engineer revision through the entry point. If blocked, hand back concrete evidence rather than choosing a replacement design.>

## Shared contracts (planner-owned)
<The configured entry point owns architecture and data/API contracts. UI structure, classes/styles, states, interactions, and UI test requirements belong to the UI/UX engineer.>
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or interaction contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, classes/tokens, and responsive behavior>
- Include UI and integration test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not edit tracked production source or implement production UI as the UI/UX engineer; temporary preview artifacts outside the tracked repository are permitted.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, interaction behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > UI/UX engineer to solo renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`solo\` agent **only** receives the text inside your \`handoff --next-role="solo"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. Own the UI design and test contract, but do not implement production code or edit tracked source. Temporary design preview artifacts outside the tracked repository and browser rendering are permitted. Do not spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for existing source and rendered DOM evidence, browser-rendered target markup/styles, complete user flows with loading/empty/error/success states, responsive details, and exact UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration test plan.
- Study the existing source markup and browser-rendered DOM/styles, including relevant states and viewports, before proposing a target.
- Supply complete target HTML/DOM with exact class attributes and required CSS/theme dependencies, then render it in a browser using project styling and theme. Include the preview location, viewport/state, and actual screenshot or DOM/computed-style evidence.
- Define exact production UI tests, entry points, selectors/assertions, and the expected meaningful initial failure; the implementer runs them before production edits, then reruns them and compares the result with the rendered target. Never test only a mock of proposed HTML.
- The UI/UX engineer owns interface structure, classes/styles, states, interactions, and this UI test contract. Missing render evidence or unresolved choices are blockers for the configured entry point; implementation or test-contract deviations need an engineer revision through that entry point.
- Do not propose or require web accessibility implementation work unless the user explicitly requests it.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and rendered target HTML/classes/styles detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// rendered HTML, class attributes, CSS/theme dependencies, and state/viewport variations.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Existing UI evidence
<source paths, current rendered DOM/style evidence, observed problem, and inspected states/viewports>

## Rendered target markup
<complete target HTML with class attributes and required CSS/style dependencies for each affected state/viewport; concrete mapping to production components; preview artifact location plus actual browser screenshot or DOM/computed-style evidence; unresolved rendering prerequisites are blockers>

## UI tests first
<exact production UI test files, fixtures, entry points, selectors/assertions, and expected initial failure for the engineer-owned markup/styles/states/interactions; run before production edits, confirm design-relevant failure, implement, then rerun to pass; never test only a mock of the proposal>

## Design authority and implementation sequence
1. The entry point states the UI problem and coordinates the handoff.
2. The UI/UX engineer studies existing markup and renders the target DOM, classes, and styles.
3. The implementer writes and runs the specified UI tests before changing production UI.
4. The implementer implements the remaining code, reruns the tests, and compares the production UI with the rendered design.
<The UI/UX engineer owns UI design and its test contract. The entry point forwards it unchanged; implementation or test-contract deviations require an engineer revision through the entry point. If blocked, hand back concrete evidence rather than choosing a replacement design.>

## Shared contracts (configured entry-point-owned)
<The configured entry point owns architecture and data/API contracts. UI structure, classes/styles, states, interactions, and UI test requirements belong to the UI/UX engineer.>
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or interaction contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, classes/tokens, and responsive behavior>
- Include UI and integration test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not edit tracked production source or implement production UI as the UI/UX engineer; temporary preview artifacts outside the tracked repository are permitted.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, interaction behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="solo" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > entry point to UI/UX engineer renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`uiux-engineer\` agent **only** receives the text inside your \`handoff --next-role="uiux-engineer"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (planner → uiux-engineer)

The automatically injected \`<user-message>\` is the authoritative request. State the observed UI problem and desired user outcome, relevant constraints/surfaces, and existing evidence. Do not prescribe replacement UI or classes; the UI/UX Engineer owns those decisions.

Ask the engineer to inspect the existing source markup and rendered DOM/styles, then produce and browser-render one concrete target with exact HTML/classes/style dependencies, complete user flows and loading/empty/error/success states, responsive behavior, and an exact tests-first contract. Request screenshot or DOM/computed-style evidence plus viewport/state and preview location; unresolved rendering prerequisites are blockers.

After completing the design, hand it back to \`planner\` with the normal handoff command. Stop after the successful handoff; do not implement the design or delegate further work.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="planner" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;

exports[`UI/UX engineer handoff template snapshots > generic UI/UX engineer handback renders the complete contract 1`] = `
"---

⚠️ **CRITICAL — Recipient visibility**

The \`<entry-point-role>\` agent **only** receives the text inside your \`handoff --next-role="<entry-point-role>"\` command.

They **cannot** see:
- Anything you write in this agent session
- Progress reports
- Tool output

Put your **complete** deliverable in the handoff message — not in session text.

---

## Handoff Template (UI/UX Engineer → Entry Point)

Return exactly one recommended, evidence-backed design brief for the authoritative user request to the configured entry point. Own the UI design and test contract, but do not implement production code or edit tracked source. Temporary design preview artifacts outside the tracked repository and browser rendering are permitted. Do not spawn subagents, present alternatives, or expand scope. The injected \`<handoff-templates>\` block is the authoritative structure for this handoff; complete every section in order. Use \`Not Applicable.\` only when a section is genuinely inapplicable, with no explanation or filler.

## Summary
<describe the design problem being solved, the repository/product surface where it fits, and the evidence-backed context; do not refer to hidden session text>

## Goal
<state the one-sentence outcome this design delivers>

## Key Knowledge for High Quality Bar
<cite the inspected repository patterns and complete the UI/UX engineer checklist below; do not provide a high-level essay>
- Produce exactly one recommended design for existing source and rendered DOM evidence, browser-rendered target markup/styles, complete user flows with loading/empty/error/success states, responsive details, and exact UI tests.
- Name concrete repository paths, existing components/tokens, props/state/events, data boundaries, acceptance criteria, risks, and verification steps.

- Specify complete user flows with explicit loading, empty, error, success, disabled, and retry states where applicable.
- Define component hierarchy and ownership, props/state/events, data boundaries, and interaction behavior.
- Choose concrete existing ShadCN components with the Base UI backend and lucide-react/react-icons conventions; do not write "use an appropriate component."
- Specify Tailwind utility classes or semantic theme-token classes for layout, spacing, sizing, typography, states, responsive behavior, and dark mode.
- Specify responsive breakpoints/layout behavior, visual feedback, destructive-action safeguards, exact files/components, and the UI/integration test plan.
- Study the existing source markup and browser-rendered DOM/styles, including relevant states and viewports, before proposing a target.
- Supply complete target HTML/DOM with exact class attributes and required CSS/theme dependencies, then render it in a browser using project styling and theme. Include the preview location, viewport/state, and actual screenshot or DOM/computed-style evidence.
- Define exact production UI tests, entry points, selectors/assertions, and the expected meaningful initial failure; the implementer runs them before production edits, then reruns them and compares the result with the rendered target. Never test only a mock of proposed HTML.
- The UI/UX engineer owns interface structure, classes/styles, states, interactions, and this UI test contract. Missing render evidence or unresolved choices are blockers for the configured entry point; implementation or test-contract deviations need an engineer revision through that entry point.
- Do not propose or require web accessibility implementation work unless the user explicitly requests it.

## Force Multipliers
<name the existing components, patterns, tokens, utilities, and platform conventions to reuse, and state why each reduces implementation risk or duplication>
- Keep the design within the repository's established source-of-truth boundaries and avoid introducing a new registry or abstraction without evidence.

## Files to implement (exhaustive, file-level)
List every file or product surface the implementer must create or modify. Mark each \`(Required)\` or \`(Optional)\`. For every file, give the exact responsibility, exported types/signatures/props, state/data/event boundaries, component hierarchy, and rendered target HTML/classes/styles detailed enough to implement without guessing.
<!-- File references (clickable in workspace UI): use repo-relative paths with a file extension — e.g. \`apps/webapp/src/modules/chatroom/foo.ts\` or [apps/webapp/src/foo.ts](apps/webapp/src/foo.ts). Avoid absolute paths, file:// prefixes, and paths without / or extension. -->

### \`<repo-relative/path.ext>\` (Required)
**Change:** <precise add/modify/remove responsibility and why>

\`\`\`text
// Component hierarchy, props/state/events, test structure, or exact
// rendered HTML, class attributes, CSS/theme dependencies, and state/viewport variations.
\`\`\`

<add one block per file; do not collapse multiple files into a directory or vague layer>

## Existing UI evidence
<source paths, current rendered DOM/style evidence, observed problem, and inspected states/viewports>

## Rendered target markup
<complete target HTML with class attributes and required CSS/style dependencies for each affected state/viewport; concrete mapping to production components; preview artifact location plus actual browser screenshot or DOM/computed-style evidence; unresolved rendering prerequisites are blockers>

## UI tests first
<exact production UI test files, fixtures, entry points, selectors/assertions, and expected initial failure for the engineer-owned markup/styles/states/interactions; run before production edits, confirm design-relevant failure, implement, then rerun to pass; never test only a mock of the proposal>

## Design authority and implementation sequence
1. The entry point states the UI problem and coordinates the handoff.
2. The UI/UX engineer studies existing markup and renders the target DOM, classes, and styles.
3. The implementer writes and runs the specified UI tests before changing production UI.
4. The implementer implements the remaining code, reruns the tests, and compares the production UI with the rendered design.
<The UI/UX engineer owns UI design and its test contract. The entry point forwards it unchanged; implementation or test-contract deviations require an engineer revision through the entry point. If blocked, hand back concrete evidence rather than choosing a replacement design.>

## Shared contracts (configured entry-point-owned)
<The configured entry point owns architecture and data/API contracts. UI structure, classes/styles, states, interactions, and UI test requirements belong to the UI/UX engineer.>
<list cross-file interfaces, component/data contracts, state boundaries, or write exactly \`Not Applicable.\` when genuinely inapplicable>

### Interfaces & types
\`\`\`typescript
// Shared props, state, events, query shapes, or interaction contracts.
\`\`\`

### Reference snippets
\`\`\`tsx
// Canonical component imports, hook usage, or layout examples.
\`\`\`

## Requirements (acceptance criteria)
- <one concrete, verifiable requirement per bullet; include exact states, interactions, classes/tokens, and responsive behavior>
- Include UI and integration test coverage for the design's risk areas.
- Verify the implemented user-facing entry point end-to-end; unit tests alone are insufficient.

## What to avoid
- Do not edit tracked production source or implement production UI as the UI/UX engineer; temporary preview artifacts outside the tracked repository are permitted.
- Do not present alternative designs, generic advice, or requirements without concrete evidence and file-level consequences.
- Do not invent components, props, tokens, interaction behavior, or source-of-truth locations when existing repository patterns apply.
- <explicit task-specific anti-patterns, scope boundaries, and destructive-action/source-of-truth pitfalls>

## Skills to activate
- <relevant repository skills and why they apply, or write exactly \`Not Applicable.\` when none apply>

## Out of scope
- <explicit files, flows, behavior, or migration work the implementer must not touch>

## Handoff
Run the normal handoff command to the configured entry point with this complete design, then stop. Replace \`<entry-point-role>\` with the configured entry-point role before running it.

\`\`\`bash
chatroom handoff --chatroom-id="<chatroom-id>" --role="uiux-engineer" --next-role="<entry-point-role>" << 'CHATROOM_HANDOFF_END'
---MESSAGE---
[Your message here]
CHATROOM_HANDOFF_END
\`\`\`"
`;
